Changes & improvements. demo expressJS and vault

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,75 +1,45 @@
 version: "3.7"
 
 services:
-
-################################################################################
   # NGINX PROXY
-  ################################################################################
   nginx-proxy:
-    image: jwilder/nginx-proxy
+    image: nginx:latest
     restart: unless-stopped
     container_name: nginx-proxy
-    links:
-      - auth-service-web
-      - auth-service-api
     volumes:
-      - ./certs:/etc/nginx/certs
-      - ./nginx/nginx_headers.conf:/etc/nginx/conf.d/nginx_headers.conf
-      - ./nginx/vhost.d:/etc/nginx/vhost.d
-      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./nginx/web-app-proxy.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/nginx_headers.conf:/etc/nginx/nginx_headers.conf
     ports:
       - "80:80"
-      - "443:443"
+    networks:
+      - app-network
 
-  ################################################################################
-  # REDIS
-  ################################################################################
-  redis:
-    image: redis:latest
-    restart: unless-stopped
-    ports:
-      - "6379:6379"
-    volumes:
-      - ./data/redis:/data
-
-  ################################################################################
-  # AUTH SERVICE
-  ################################################################################
-  auth-service-api:
-    image: myapp
-    volumes:
-      - ./data/auth_service/:/data
-      - ./certs:/etc/nginx/certs
-      - ./shared:/home/vault
-    links:
-      - redis
-    env_file:
-      - ./api-env
-    restart: unless-stopped
-
-  auth-service-web:
-    image: myapp
-    volumes:
-      - ./data/auth_service/:/data
-      - ./shared:/home/vault
-    env_file:
-      - ./web-env
-    restart: unless-stopped
-    environment:
-      - AUTH_WEB_REDIS_HOST=redis
-
-  ################################################################################
   # VAULT AGENT
-  ################################################################################
-
   vault-agent:
-    image: vault
+    image: hashicorp/vault
     container_name: vault-agent
     privileged: true
     environment:
-      VAULT_ADDR: "https://vault.com"
+      VAULT_ADDR: "https://hcvault-sandbox.llm-aws.com:8200/"
     volumes:
       - ./vault-config:/etc/vault.d
-      - ./:/home/vault
-    command: "sh etc/vault.d/init.sh"
+      - ./WebRender/:/home/vault/
+    command: ["sh", "-c", "vault agent -config=/etc/vault.d/vault-agent.hcl"]
+    networks:
+      - app-network
 
+  # WEB APP RENDER
+  web-app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: web-app-render
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
+
+volumes:
+  node_modules:
