--- a/nginx/nginx_headers.conf
+++ b/nginx/nginx_headers.conf
@@ -1,24 +1,41 @@
 server_tokens off;
 
-proxy_hide_header Strict-Transport-Security;
+# Security headers
 add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-
-add_header Content-Security-Policy "default-src 'self' 'unsafe-eval' 'unsafe-inline' https://*.amazonaws.com https://cdwalmart.blob.core.windows.net https://*.creativedrive.com wss://*.creativedrive.com https://*.accenture.com wss://*.accenture.com https://*.nr-data.net https://*.hotjar.com; script-src 'self' https://*.hotjar.com https://s3.amazonaws.com https://www.googletagmanager.com https://bam.nr-data.net https://www.google.com https://www.google-analytics.com https://www.gstatic.com https://www.googleadservices.com https://storage.googleapis.com https://js-agent.newrelic.com 'unsafe-inline' 'unsafe-eval'; img-src 'self' * data: www.googletagmanager.com; upgrade-insecure-requests; block-all-mixed-content; frame-src https://*.hotjar.com 'self' blob:; media-src 'self' https://*.s3.amazonaws.com https://*.creativedrive.com https://*.accenture.com https://akamai.ksckreate.net data:; font-src 'self' data:;" always;
-
-proxy_hide_header X-Content-Type-Options;
+add_header Content-Security-Policy "default-src 'self'";
 add_header X-Content-Type-Options "nosniff" always;
-
-proxy_hide_header Cache-Control;
 add_header Cache-Control "no-store" always;
-
-proxy_hide_header X-XSS-Protection;
 add_header X-XSS-Protection "1; mode=block" always;
-
-proxy_hide_header X-Frame-Options;
 add_header X-Frame-Options "SAMEORIGIN" always;
 
-proxy_cookie_flags laravel_session nosecure;
-proxy_cookie_path / "/; SameSite=None; max-age=1536000; Secure";
+# Limit the request rate
+limit_req_zone $binary_remote_addr zone=one:10m rate=1r/s;
 
-proxy_hide_header X-Powered-By;
-fastcgi_hide_header X-Powered-By;
+# Disable unused HTTP methods
+if ($request_method !~ ^(GET|HEAD|POST)$ ) {
+    return 405;
+}
+
+# Limit Request Size
+client_max_body_size 5M;
+
+# Hide error versions
+fastcgi_intercept_errors on;
+
+server {
+    listen 80;
+
+    # Request rate limiting in the context of a server or location
+    limit_req zone=one burst=5;
+
+    location / {
+        proxy_pass http://web-app:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    include /etc/nginx/vhost.d/*;
+}
