made changes on appconfigs file loading.

--- a/WebRender/appconfigs.json
+++ b/WebRender/appconfigs.json
@@ -1,9 +1,9 @@
 {
-  "value1": "I don' want to say helloworld",
-  "value2": "Juan Bacus",
-  "value3": "700",
-  "value4": "Lebanon",
-  "value5": "LakeShore is great",
+  "value1": "Hail, citizens!",
+  "value2": "Marcus Aurelius",
+  "value3": "42",
+  "value4": "Gaul",
+  "value5": "Alea iacta est",
   "value6": "hardcoded value in ctmpl",
   "value7": "hardcoded value in ctmpl",
   "value8": "hardcoded value in ctmpl"
