--- a/WebRender/appconfigs.json
+++ b/WebRender/appconfigs.json
@@ -1,9 +1,9 @@
 {
-  "value1": "Hail, citizens!",
-  "value2": "Marcus Aurelius",
-  "value3": "42",
-  "value4": "Gaul",
-  "value5": "Alea iacta est",
+  "value1": "Greetings, my compatriots!",
+  "value2": "Ramses II",
+  "value3": "47",
+  "value4": "Egypt",
+  "value5": "May the sands of time bear witness to our glory",
   "value6": "hardcoded value in ctmpl",
   "value7": "hardcoded value in ctmpl",
   "value8": "hardcoded value in ctmpl"
