condfigured secret polling timeframe

--- a/web/configs/appconfigs.json
+++ b/web/configs/appconfigs.json
@@ -1,9 +1,9 @@
 {
-  "value1": "Greetings to my fellow Armenians!",
-  "value2": "Tigranes the Great",
-  "value3": "50",
-  "value4": "Armenia",
-  "value5": "Amidst the mountains and valleys, our legacy endures",
+  "value1": "Greetings, compatriots!",
+  "value2": "Marcus Tullius Cicero",
+  "value3": "56",
+  "value4": "Rome",
+  "value5": "In the heart of the empire, our legacy lives on",
   "value6": "hardcoded value in ctmpl",
   "value7": "hardcoded value in ctmpl",
   "value8": "hardcoded value in ctmpl"
